@@ -1,21 +1,21 @@
 package com.culturefinder.songdodongnae.delicious_spot.domain;
 
-import com.culturefinder.songdodongnae.admin.delicious_spot.dto.AdminDeliciousSpotInputDto;
+import com.culturefinder.songdodongnae.admin.delicious_spot.dto.AdminDeliciousSpotCreateRequestDto;
 import com.culturefinder.songdodongnae.creator.domain.Creator;
 import com.culturefinder.songdodongnae.curation.CurationThumbnailResDto;
-import com.culturefinder.songdodongnae.series.domain.Series;
+import com.culturefinder.songdodongnae.delicious_spot.dto.DeliciousSpotResponseDto;
+import com.culturefinder.songdodongnae.series.domain.SeriesDeliciousSpot;
 import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
+import lombok.*;
 
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
 
-@Getter
+@Data
 @Entity
+@Builder
 @AllArgsConstructor
 @NoArgsConstructor
 public class DeliciousSpot {
@@ -61,10 +61,15 @@ public class DeliciousSpot {
 
     private LocalDateTime createdTime;
 
+    private String imageUrl;
+
     @OneToMany(mappedBy = "deliciousSpot", cascade = CascadeType.ALL)
     private List<DeliciousSpotImage> deliciousSpotImages = new ArrayList<>();
 
-    public DeliciousSpot(AdminDeliciousSpotInputDto deliciousSpot) {
+    @OneToMany(mappedBy = "deliciousSpot", cascade = CascadeType.ALL)
+    private List<SeriesDeliciousSpot> seriesDeliciousSpotList = new ArrayList<>();
+
+    public DeliciousSpot(AdminDeliciousSpotCreateRequestDto deliciousSpot) {
         this.name = deliciousSpot.getName();
         this.location = deliciousSpot.getLocation();
         this.price = deliciousSpot.getPrice();
@@ -82,17 +87,37 @@ public class DeliciousSpot {
         this.likes = deliciousSpot.getLikes();
     }
 
+    public DeliciousSpotResponseDto fromEntity() {
+        return DeliciousSpotResponseDto.builder()
+                .id(this.id)
+                .creator(this.creator)
+                .name(this.name)
+                .location(this.location)
+                .price(this.price)
+                .naverRating(this.naverRating)
+                .kakaoRating(this.kakaoRating)
+                .startTime(this.startTime)
+                .endTime(this.endTime)
+                .waiting(this.waiting)
+                .parking(this.parking)
+                .suggestionMenu(this.suggestionMenu)
+                .description(this.description)
+                .onelineDescription(this.onelineDescription)
+                .contact(this.contact)
+                .instagram(this.instagram)
+                .likes(this.likes)
+                .createdTime(this.createdTime)
+                .deliciousSpotImages(this.deliciousSpotImages)
+                .build();
+    }
+
     public CurationThumbnailResDto fromThumbEntity() {
         return CurationThumbnailResDto.builder()
                 .id(this.id)
                 .title(this.name)
                 .introduction(this.onelineDescription)
-                .imageUrl(this.deliciousSpotImages.get(0).getImageUrl())
+                .imageUrl(this.deliciousSpotImages.getFirst().getImageUrl())
                 .build();
-    }
-
-    public void setDeliciousSpotImages(List<DeliciousSpotImage> deliciousSpotImages) {
-        this.deliciousSpotImages = deliciousSpotImages;
     }
 
 }
